--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 </section>
 
 
-<script src="js/jQuery.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/lightbox.js"></script>
 
