--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 </div><!--  col-xs-4 col-sm-4 col-md-4 -->
               </div><!--  row -->
 
-               <div class="row">
+              <div class="row">
                 <div class="col-xs-4 col-sm-4 col-md-4">
                   <a href="images/sample4.jpg" data-lightbox="gallery one" data-title="Sample Image One"><img src="images/sample4.jpg" alt=""></a>
                   <div class="title">
@@ -347,6 +347,12 @@
   </div><!--  row -->
 </div><!--  container -->
 </section>
+
+<div class="backToCV">
+  <a href="https://markoton.github.io/MarkoTON-Resume.github.io/" target="_blank">
+    <img src="images/resume.png" alt="Resume" class="rounded-square">
+  </a>
+</div>
 
 
 <script src="js/jquery.js"></script>
